# secure-vault

./: .gitignore  app.json  package-lock.json  package.json  ТЗ Secure Vault.docx
app/: _layout.jsx  index.jsx
app/(auth)/: login.jsx
app/(settings)/: account.jsx
app/(vault)/: _layout.jsx  profile.jsx
backend/: auth.py  docker-compose.yml  main.py  models.py  pyproject.toml
backend/app/: config.py  database.py  databese.py  main.py
backend/app/auth/: auth.py  dependencies.py  errors.py  models.py  repository.py  router.py
backend/app/migration/: env.py
backend/app/migration/versions/: 07714018741f_.py  284071aaf2b7_.py  2cb51c40d7ae_.py  4693a47b44ac_.py  4963f981803a_.py  71180d70b3d7_initial_revision.py  8543d676f4d9_.py  864f2878b029_.py  aad3027e57e2_.py  d2bb12d1a5a4_.py
backend/app/vault/: models.py  repository.py  router.py  schemas.py
components/: ThemedLogo.jsx  ThemedTextInput.jsx  ThemedView.jsx
frontend/: cookies.txt  package-lock.json  package.json
frontend/app/: _layout.jsx  index.jsx  test-connection.jsx
frontend/app/(auth)/: _layout.jsx  login.jsx  register.jsx
frontend/app/(settings)/: _layout.jsx  security.jsx
frontend/app/(vault)/: _layout.jsx  files.jsx  profile.jsx  shares.jsx
frontend/config/: api.js
frontend/constants/: Colors.js
frontend/contexts/: UserContext.jsx
